--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -29,8 +29,8 @@
                         <div class="text-danger">{{ error }}</div>
                     {% endfor %}
                 </div>
-                <div class="d-grid gap-2">
-                    {{ form.submit(class="btn btn-primary") }}
+                <div class="d-flex justify-content-center mt-2">
+                    {{ form.submit(class="btn btn-primary rounded-pill", style="width: 40%;") }}
                 </div>
             </form>
         </div>
