--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,10 @@
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #f8f9fa;
+    background-color: #061942;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    color: #ecf0f1
 }
 
 .bg-dark-custom {
@@ -119,6 +120,6 @@ body {
 }
 
 .carousel-inner img {
-    height: 350px;
+    height: 500px;
     object-fit: cover;
 }
