--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2 class="mt-5 mb-4">Bem-vindo, Administrador {{ current_user.username }}!</h2>
-    <p class="lead">Aqui você pode gerenciar a plataforma e enviar mensagens para o chat geral.</p>
+    <h2 class="mt-5 mb-2 justify-content-center">Bem-vindo, Administrador {{ current_user.username }}!</h2>
+    <p class="fs-6 mb-4 justify-content-center">Aqui você pode gerenciar a plataforma e enviar mensagens para o chat geral.</p>
 
     <div class="card mb-4">
         <div class="card-header">
-            <h4>Enviar Mensagem para o Chat Geral</h4>
+            <p class="fs-5 mb-0">Enviar Mensagem para o Chat Geral</p>
         </div>
         <div class="card-body">
             <form method="POST" action="">
@@ -17,8 +17,8 @@
                         <div class="text-danger">{{ error }}</div>
                     {% endfor %}
                 </div>
-                <div class="d-grid gap-2">
-                    {{ form.submit(class="btn btn-primary") }}
+                <div class="d-flex justify-content-end mt-4">
+                    {{ form.submit(class="btn btn-primary rounded-pill px-4") }}
                 </div>
             </form>
         </div>
@@ -26,7 +26,7 @@
 
     <div class="card mb-4">
         <div class="card-header">
-            <h4>Últimas Mensagens do Chat Geral</h4>
+            <p class="fs-5 mb-0">Últimas Mensagens do Chat Geral</p>
         </div>
         <div class="card-body">
             {% if general_messages %}
