--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -1,23 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <h2 class="mt-5 mb-4 text-center">Esqueci Minha Senha</h2>
-            <p class="text-center">Digite seu nome de usuário para iniciar o processo de redefinição de senha.</p>
-            <form method="POST" action="">
-                {{ form.hidden_tag() }}
-                <div class="mb-3">
-                    {{ form.username.label(class="form-label") }}
-                    {{ form.username(class="form-control", placeholder="Seu nome de usuário") }}
-                    {% for error in form.username.errors %}
-                        <div class="text-danger">{{ error }}</div>
-                    {% endfor %}
-                </div>
-                <div class="d-grid gap-2">
-                    {{ form.submit(class="btn btn-primary") }}
-                </div>
-            </form>
-            <p class="text-center mt-3">Lembrou? <a href="{{ url_for('login') }}">Voltar ao Login</a></p>
+    <div class="row justify-content-center mt-5 mb-5">
+        <div class="col-md-6 col-lg-5">
+            <div class="card shadow-lg border-0 rounded-4">
+                <div class="card-body p-5">
+                    <h2 class="mt-1 mb-4 text-center">Recuperar Senha</h2>
+                    <p class="text-center">Digite seu e-mail para iniciar o processo de redefinição de senha.</p>
+                    <form method="POST" action="">
+                        {{ form.hidden_tag() }}
+                        <div class="mb-3 mt-4">
+                            {{ form.email.label(class="form-label") }}
+                            {{ form.email(class="form-control", placeholder="Seu email cadastrado") }}
+                            {% for error in form.email.errors %}
+                                <div class="text-danger">{{ error }}</div>
+                            {% endfor %}
+                        </div>
+                        <div class="d-flex justify-content-center mt-4">
+                            {{ form.submit(class="btn btn-primary rounded-pill", style="width: 50%;") }}
+                        </div>
+                    </form>
+                    <p class="text-center mt-3">Lembrou? <a href="{{ url_for('login') }}">Voltar ao Login</a></p>
+                </div>  
+            </div>
         </div>
     </div>
 {% endblock content %}
